[package]
name = "causal_grav"
version = "0.1.0"
edition = "2021"

[dependencies]
graphics = { path = "../graphics" }
#lin_alg = "^1.0.3"
lin_alg = { path = "../lin_alg", features = ["encode"] }
barnes_hut = { path = "../barnes_hut", features = ["encode"]}
egui = "^0.30.0"

rand = "^0.8.5"

# cudarc = { version = "^0.12.1", features=["cuda-12060"] }

plotters = "^0.3.7"  # For 2d plots
# For saving and loading snapshots.
bincode = "^2.0.0-rc.3"

rayon = "^1.10.0"  # Parallel execution on CPU using thread pools.

# todo: Use https://github.com/bempp/kifmm when ready! Adapt for Windows.