[package]
name = "causal_grav"
version = "0.1.0"
edition = "2021"

[dependencies]
graphics = { path = "../graphics" }
egui = "^0.30.0"

#lin_alg = "^1.0.4"
lin_alg = { path = "../lin_alg", features = ["encode"] }

# todo: Use https://github.com/bempp/kifmm when ready. Adapt for Windows.
barnes_hut = { path = "../barnes_hut", features = ["encode"]}
#kifmm = { git = "https://github.com/bempp/kifmm/" }
#kifmm = { version = "^2.0.0" }

rand = "^0.8.5"

plotters = "^0.3.7"  # For 2d plots
# For saving and loading snapshots.
bincode = "^2.0.0-rc.3"

rayon = "^1.10.0"  # Parallel execution on CPU using thread pools.

# Keep this cuda version in sync with what you have installed on the system.
cudarc = { version = "^0.13.3", optional=true, features=["cuda-12060"] }


# We feature-gate the CUDA dependency, so this program can be run on computers that don't have a
# suitable graphics chip.
[features]
default = []
cuda = ["cudarc"]